// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditButton matches the last snapshot when isLoading is false 1`] = `
<View>
  <View>
    <Icon
      allowFontScaling={false}
      name="edit"
      size={12}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      edit
    </Text>
  </View>
</View>
`;

exports[`EditButton matches the last snapshot when isLoading is true 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    loading
  </Text>
</View>
`;

exports[`MemberBanner matches the last snapshot 1`] = `
<View>
  <ImagePicker
    disabled={true}
    id={1}
    onChoice={[Function]}
    onPendingChange={[Function]}
    title="Change Banner"
    type="userBanner"
  >
    <Image
      source={
        Object {
          "uri": "yay.png",
        }
      }
    />
  </ImagePicker>
  <ImagePicker
    disabled={true}
    id={1}
    onChoice={[Function]}
    onPendingChange={[Function]}
    title="Change Avatar"
    type="userAvatar"
  >
    <View>
      <Image
        source={
          Object {
            "uri": "pong.png",
          }
        }
      />
    </View>
  </ImagePicker>
</View>
`;

exports[`MemberBanner shows local images if present 1`] = `undefined`;

exports[`MemberProfile doesnt have the flag content option 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        isMe={undefined}
        person={
          Object {
            "id": 1,
          }
        }
        updateUserSettings={undefined}
      />
      <View>
        <MemberHeader
          editProfile={undefined}
          flagMember={undefined}
          isMe={undefined}
          onPressMessages={undefined}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
    </View>
  }
  id={1}
/>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        isMe={undefined}
        person={
          Object {
            "id": 1,
          }
        }
        updateUserSettings={undefined}
      />
      <View>
        <MemberHeader
          editProfile={undefined}
          flagMember={[Function]}
          isMe={undefined}
          onPressMessages={undefined}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
    </View>
  }
  id={1}
/>
`;

exports[`ReadMoreButton matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Read More
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
